src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__pointer_type_with_wrong_keyword_to_test.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
warning[E015]: `POINTER TO` is type-unsafe, consider using `REF_TO` instead
  ┌─ <internal>:3:13
  │
3 │             POINTER tu INT;
  │             ^^^^^^^ `POINTER TO` is type-unsafe, consider using `REF_TO` instead

error[E007]: Unexpected token: expected KeywordTo but found tu
  ┌─ <internal>:3:21
  │
3 │             POINTER tu INT;
  │                     ^^ Unexpected token: expected KeywordTo but found tu

error[E007]: Unexpected token: expected KeywordSemicolon but found 'INT'
  ┌─ <internal>:3:24
  │
3 │             POINTER tu INT;
  │                        ^^^ Unexpected token: expected KeywordSemicolon but found 'INT'
